# MultiFamily

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
examples/: sample_batch.json  sample_property.json
src/multifamily_screener/: __init__.py  __main__.py  cli.py  enrichment.py  human_reports.py  normalization.py  reports.py  schemas.py  scoring.py
src/multifamily_screener/ingestion/: __init__.py  rentcast_client.py
src/multifamily_screener/normalization/: __init__.py  rentcast_mapper.py
src/multifamily_screener/screening/: __init__.py  batch.py
src/multifamily_screener/underwriting/: __init__.py  common.py  dcf.py  debt.py  expenses.py  income.py  metrics.py  offer.py  pro_forma.py
tests/: test_batch.py  test_rentcast.py  test_report.py  test_underwriting.py
