[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multifamily-screener"
version = "0.1.0"
description = "Multifamily property underwriting and screening engine."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
]

[project.scripts]
multifamily-screener = "multifamily_screener.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
